cropping micro-thumbs, fixed resize limit

--- a/less/includes/lightbox/buy-form/option.less
+++ b/less/includes/lightbox/buy-form/option.less
@@ -110,26 +110,64 @@
       
       cursor: pointer;
       // .active& { cursor: pointer; }
-      width: 16px;
+      // width: 16px;
       
-      .buy-form-fullscreen & {
-        padding-right: 15px;
-      }
+      // .buy-form-fullscreen & {
+      //   padding-right: 15px;
+      // }
       // height: 16px;
       
-      color: rgba(0,0,0,.4);
-      .desktop-ua &:hover { color: rgba(0,0,0,1); }
-      .desktop-ua &:hover { color: @highlighted; }
-      .dark-mode & {
-        color: rgba(255,255,255,.4);
-        .desktop-ua&:hover { color: rgba(255,255,255,1); }
-        .desktop-ua&:hover { color: @highlighted; }
+      // color: rgba(0,0,0,.4);
+      // .desktop-ua &:hover { color: rgba(0,0,0,1); }
+      // .desktop-ua &:hover { color: @highlighted; }
+      // .dark-mode & {
+      //   color: rgba(255,255,255,.4);
+      //   .desktop-ua&:hover { color: rgba(255,255,255,1); }
+      //   .desktop-ua&:hover { color: @highlighted; }
+      // }
+      
+      // &:after {
+      //   &:extend(.icon);
+      //   &:extend(.icon.crop);
+      //   vertical-align: -2px;
+      // }
+      
+      background: rgba(0,0,0,0.5);
+      background: @active;
+      background: url(/img/pics/events/1/thumbs/img43.jpg) center/cover no-repeat;
+      
+      height: 32px;
+      // border-radius: 3px;
+      overflow: hidden;
+      box-shadow: inset 0 0 0 1px rgba(0,0,0,.2);
+      .dark-mode & { 
+        box-shadow: inset 0 0 0 1px rgba(255,255,255,1);
+        box-shadow: none;
+        box-sizing: border-box;
+        border: #777 1px solid;
+      }
+      // .dark-mode & { box-shadow: none; }
+      
+      position: relative;
+      
+      .buy-form-fullscreen & {
+        margin-right: 15px;
       }
       
-      &:after {
-        &:extend(.icon);
-        &:extend(.icon.crop);
-        vertical-align: -2px;
+      .crop-cover {
+        &:extend(.fill);
+        // position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,.8);
+        // .dark-mode & { background: @highlighted; }
+        .dark-mode & { background: rgba(0,0,0,.9); }
+        // background: @highlighted;
+        
+        &.top { top: -100%; bottom: auto; }
+        &.right { left: 100%; right: auto; }
+        &.bottom { top: 100%; bottom: auto; }
+        &.left { left: -100%; right: auto; }
       }
     }
     
