--- a/less/includes/lightbox/photo/crop.less
+++ b/less/includes/lightbox/photo/crop.less
@@ -3,7 +3,7 @@
   /*==========================================================================*\
     Covers for cropped areas
   \*==========================================================================*/
-  .crop-covers {
+  .img .crop-covers {
     &:extend(.fill);
     overflow: hidden;
     
@@ -20,7 +20,7 @@
       // visibility: visible;
     }
   }
-  .crop-cover {
+  .img .crop-cover {
     &:extend(.fill);
     // position: absolute;
     width: 100%;
