--- a/less/includes/lightbox/top-right.less
+++ b/less/includes/lightbox/top-right.less
@@ -178,11 +178,18 @@
   
   @media (max-width: 765px) {
     padding: 0 15px;
-    .category, .categories, .count, .toggle-fullscreen {
+    // .category, .categories, .count, .toggle-fullscreen {
+    //   display: none !important;
+    // }
+    .category, .categories, .count {
       display: none !important;
     }
     .close {
       margin-left: 0;
+    }
+    .toggle-fullscreen {
+      margin-left: 4px;
+      margin-right: 15px;
     }
   }
 }
